# smart_rag

./: .env.example  .gitignore  README.md  pyproject.toml  run.py
app/: agent.py  chat_history.py  common_tools.py  config.py  loader.py  logger.py  main.py  reranker.py  retriever.py  schemas.py  vector_store.py
app/processors/: __init__.py  data_cleaner.py  file_router.py  pdf_processor.py  pipeline.py  smart_chunker.py
docs/: code_walkthrough.md  usage_guide.md
front/: index.html  package-lock.json  package.json  vite.config.js
front/src/: App.vue
front/src/api/: index.js
front/src/router/: index.js
front/src/views/: Chat.vue  Dashboard.vue  Documents.vue  Query.vue  Upload.vue
