[project]
name = "smart-rag"
version = "0.2.0"
description = "Enterprise RAG Agent System based on LangChain + Milvus + FastAPI"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # ---- 核心框架 ----
    "langchain>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-text-splitters>=0.3.0",
    "langchain-openai>=0.3.0",
    "langchain-milvus>=0.2.0",
    "langchain-huggingface>=0.1.0",
    # ---- 模型推理 ----
    "sentence-transformers>=3.0.0",
    "torch>=2.0.0",
    # ---- API 服务 ----
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.12",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    # ---- 向量库 ----
    "pymilvus>=2.4.0,<3.0",
    # ---- 模型下载 ----
    "modelscope>=1.0.0",
    "pypdf>=6.14.2",
    "docling>=2.110.0",
    "pymupdf>=1.28.0",
    "pypdf2>=3.0.1",
    "rapidocr-onnxruntime>=1.3.0",
    "opencv-python-headless>=5.0.0.93",
]

[project.optional-dependencies]
# 可选：文档预处理高级管线
# 安装方式: uv add "smart-rag[processors]"
processors = [
    # 多格式文档解析
    "unstructured>=0.15.0",
    "unstructured[pdf]>=0.15.0",
    # PDF 版面分析 (IBM Docling)
    "docling>=2.0.0",
    # 图片处理
    "Pillow>=10.0.0",
    # PDF 操作
    "PyMuPDF>=1.24.0",
]

[tool.uv]
index-url = "https://pypi.org/simple"
index-strategy = "unsafe-first-match"

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cu126"
